# ballroom-helper1.1

./: .gitignore  alembic.ini  main.py  pyproject.toml
ballroom_helper/: main.py
ballroom_helper/app/: judges.py  marks.py  registration.py  window.py
ballroom_helper/core/db/: session.py
ballroom_helper/core/db/migration/: env.py
ballroom_helper/core/db/migration/versions/: 20231218013550_e65b47e29c6f_initial.py  20231218164446_68c97e3857bb_create_athletes_judges_coaches_tables.py  20231219123645_b2e02948a817_create_couples_table.py  2023121913177_caf0279e3f73_create_athlet_coach_competitions_tables.py  20231219201143_205ccc785acb_create_db_base.py  (+5 more)
ballroom_helper/core/models/: models.py  tables.py
ballroom_helper/reports/: collegue.py  diploma.py  general_marks_blanks.py  group_participants_list.py  kid_diploma.py  marks_blank.py  registration_convert.py  registration_number.py  registrations_list.py  result_protocol.py  shedule.py
ballroom_helper/repositories/: athlet_coach_repository.py  athlete_repository.py  base_repository.py  club_repository.py  coach_repository.py  competition_judge_repository.py  competition_repository.py  group_participant_repository.py  group_repository.py  judge_repository.py  mark_repository.py  participant_repository.py  person_repository.py  result_repository.py  shedule_judge_repository.py  shedule_repository.py
ballroom_helper/static/fonts/: times.pkl
core/db/migration/: env.py
core/db/migration/versions/: 20231219123645_b2e02948a817_create_couples_table.py
core/models/: models.py  tables.py
