[tool.poetry]
name = "ballroom-helper1-1"
version = "0.1.0"
description = ""
authors = ["Anastasia Petrova <aanastasia.petrovaa@yandex.ru>"]
readme = "README.md"
packages = [{include = "ballroom_helper1"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
isort = "^5.13.2"
ruff = "^0.1.8"
psycopg2 = "^2.9.9"
tk-tools = "^0.16.0"
pydantic = "^2.5.2"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
